--- a/styles/layout.less
+++ b/styles/layout.less
@@ -72,6 +72,15 @@ nav {
 		left: 0;
 		right: 0;
 		padding: 48px;
+
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		flex-direction: column;
+		> * {
+			flex-shrink: 0;
+		}
+
 		// Changing the display property breaks transitions, so I hide it this way instead.
 		opacity: 0;
 		pointer-events: none;
