Use :extend() to reduce CSS output
I can't use too much :extend, or Chrome will choke on the 900-part
selector and apply it to every element.

--- a/styles/_theme.less
+++ b/styles/_theme.less
@@ -359,6 +359,9 @@
 
 // Applied to gates when the logic gate evaluates to true.
 .On() {
+	&:extend(.OnContent all);
+}
+.OnContent {
 	&.Gate.OR, &.Gate.XOR {
 		span:before, &:after {
 			background-color: @activeColor;
